unpackaged/main/default/objects/Contact/fields/Account_Code_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Code_Contact__c</fullName>
    <formula>Account.Account_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Code - Contact</label>
    <type>Text</type>
</CustomField>