unpackaged/main/default/objects/Contact/fields/Account_Name_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Hidden__c</fullName>
    <label>Account Name Hidden</label>
    <length>100</length>
    <type>Text</type>
</CustomField>