unpackaged/main/default/objects/Contact/fields/CDM_CAM__c.field-meta.xml
<CustomField>
    <fullName>CDM_CAM__c</fullName>
    <formula>Account.Owner.FirstName &amp; &#39; &#39; &amp; Account.Owner.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>