unpackaged/main/default/objects/Contact/fields/Contact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Contact External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>