unpackaged/main/default/objects/Contact/fields/Contact_For_Support__c.field-meta.xml
<CustomField>
    <fullName>Contact_For_Support__c</fullName>
    <label>Contact registered on EAS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>