unpackaged/main/default/objects/Contact/fields/Contact_Method_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_Preference__c</fullName>
    <label>Contact Method Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Fax</fullName>
                <color>#FFFF66</color>
                <label>Fax</label>
            </value>
            <value>
                <fullName>Mail</fullName>
                <color>#9999FF</color>
                <label>Mail</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <color>#33FFFF</color>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>