unpackaged/main/default/objects/Contact/fields/Contact_opted_out_of_email_communication__c.field-meta.xml
<CustomField>
    <fullName>Contact_opted_out_of_email_communication__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to stop receiving TechnologyOne marketing emails</inlineHelpText>
    <label>Unsubscribe from All Emails</label>
    <type>Checkbox</type>
</CustomField>