unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Awaiting contact [SDR]</fullName>
            </value>
            <value>
                <fullName>Working [SDR]</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <label>Qualified [SDR]</label>
            </value>
            <value>
                <fullName>Awaiting contact [CAM]</fullName>
            </value>
            <value>
                <fullName>Working [CAM]</fullName>
            </value>
            <value>
                <fullName>Qualified [CAM]</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Returned to Marketing</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>