unpackaged/main/default/objects/Contact/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <formula>TEXT(Account.CountryArea__c)  + &quot; / &quot; + Text(Account.Region__c)</formula>
    <label>Country/Region</label>
    <type>Text</type>
</CustomField>