unpackaged/main/default/objects/Contact/fields/Customer_Training__c.field-meta.xml
<CustomField>
    <fullName>Customer_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Training</description>
    <inlineHelpText>Hear about the latest training courses in your region</inlineHelpText>
    <label>Customer Training</label>
    <type>Checkbox</type>
</CustomField>