unpackaged/main/default/objects/Contact/fields/Date_opted_in__c.field-meta.xml
<CustomField>
    <fullName>Date_opted_in__c</fullName>
    <label>Date opted in</label>
    <type>Date</type>
</CustomField>