unpackaged/main/default/objects/Contact/fields/Date_opted_out__c.field-meta.xml
<CustomField>
    <fullName>Date_opted_out__c</fullName>
    <label>Date opted out</label>
    <type>Date</type>
</CustomField>