unpackaged/main/default/objects/Contact/fields/DNCR_Comments__c.field-meta.xml
<CustomField>
    <fullName>DNCR_Comments__c</fullName>
    <label>DNCR Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>