unpackaged/main/default/objects/Contact/fields/Employee_Classification__c.field-meta.xml
<CustomField>
    <fullName>Employee_Classification__c</fullName>
    <label>Employee Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Consulting Director</fullName>
            </value>
            <value>
                <fullName>Customer Account Manager</fullName>
            </value>
            <value>
                <fullName>Customer Development Manager</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>General Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Practice Lead</fullName>
            </value>
            <value>
                <fullName>Presales Consultant</fullName>
            </value>
            <value>
                <fullName>Product Customer Service Manager</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
            <value>
                <fullName>Sales Administrator</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Solution Manager</fullName>
            </value>
            <value>
                <fullName>Telemarketing Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>