unpackaged/main/default/objects/Contact/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Hear about upcoming events in your region</inlineHelpText>
    <label>Events</label>
    <type>Checkbox</type>
</CustomField>