unpackaged/main/default/objects/Contact/fields/Evolve_Rego_Count__c.field-meta.xml
<CustomField>
    <fullName>Evolve_Rego_Count__c</fullName>
    <description>uploaded from external system</description>
    <label>Evolve Rego Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>