unpackaged/main/default/objects/Contact/fields/Evolve_Showcase__c.field-meta.xml
<CustomField>
    <fullName>Evolve_Showcase__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Tick to include for communication on</inlineHelpText>
    <label>Evolve/Showcase</label>
    <type>Checkbox</type>
</CustomField>