unpackaged/main/default/objects/Contact/fields/Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Job_Classification__c</fullName>
    <label>Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Chairman / Board</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer / MD</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Corporate Services Management</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Finance Officer</fullName>
            </value>
            <value>
                <fullName>Finance - Senior</fullName>
            </value>
            <value>
                <fullName>Fleet Management</fullName>
            </value>
            <value>
                <fullName>Fundraising Manager</fullName>
            </value>
            <value>
                <fullName>Grants Management</fullName>
            </value>
            <value>
                <fullName>Head of Transformation</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Housing Manager</fullName>
            </value>
            <value>
                <fullName>HR - Junior</fullName>
            </value>
            <value>
                <fullName>HR - Senior</fullName>
            </value>
            <value>
                <fullName>HR Safety</fullName>
            </value>
            <value>
                <fullName>HR Training and Development</fullName>
            </value>
            <value>
                <fullName>IT - Junior &amp; Systems Admin</fullName>
            </value>
            <value>
                <fullName>IT - Senior</fullName>
            </value>
            <value>
                <fullName>Mayor and Councillors</fullName>
            </value>
            <value>
                <fullName>Ministerial Liaison</fullName>
            </value>
            <value>
                <fullName>Payroll - Junior</fullName>
            </value>
            <value>
                <fullName>Payroll - Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>