unpackaged/main/default/objects/Contact/fields/Key_Contact_for_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_for_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Contact for Account?</label>
    <type>Checkbox</type>
</CustomField>