unpackaged/main/default/objects/Contact/fields/Newsletters__c.field-meta.xml
<CustomField>
    <fullName>Newsletters__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Occasional emails containing industry, product and regional news</inlineHelpText>
    <label>Newsletters</label>
    <type>Checkbox</type>
</CustomField>