unpackaged/main/default/objects/Contact/fields/Printed__c.field-meta.xml
<CustomField>
    <fullName>Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed</label>
    <type>Checkbox</type>
</CustomField>