unpackaged/main/default/objects/Contact/fields/Product_Industry_Updates__c.field-meta.xml
<CustomField>
    <fullName>Product_Industry_Updates__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Information about software releases plus product and industry news</inlineHelpText>
    <label>Product &amp; Industry Updates</label>
    <type>Checkbox</type>
</CustomField>