unpackaged/main/default/objects/Contact/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>User Profile copied to Contact</description>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>