unpackaged/main/default/objects/Contact/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <formula>TEXT(Account.Rating)</formula>
    <label>Rating</label>
    <type>Text</type>
</CustomField>