unpackaged/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region of the account to use in List View/Reports etc</description>
    <formula>TEXT(Account.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>