unpackaged/main/default/objects/Contact/fields/SAL_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Create_Date__c</fullName>
    <description>Updated in Marketo for SDR reporting</description>
    <label>SAL Create Date</label>
    <type>Date</type>
</CustomField>