unpackaged/main/default/objects/Contact/fields/SDR_Contact__c.field-meta.xml
<CustomField>
    <fullName>SDR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_SDR</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>