unpackaged/main/default/objects/Contact/fields/Service_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Service_Indicator__c</fullName>
    <formula>Account.Service_Indicator__c</formula>
    <label>Service</label>
    <type>Text</type>
</CustomField>