unpackaged/main/default/objects/Contact/fields/Special_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirement__c</fullName>
    <description>Special Requirement when attending to event</description>
    <inlineHelpText>Special Requirement when attending to event, ie. vegetarian</inlineHelpText>
    <label>Special Requirement</label>
    <type>TextArea</type>
</CustomField>