unpackaged/main/default/objects/Contact/fields/SQL_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>SQL_Create_Date__c</fullName>
    <label>SQL Create Date</label>
    <type>Date</type>
</CustomField>