unpackaged/main/default/objects/Contact/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Status_Reason</valueSetName>
    </valueSet>
</CustomField>