unpackaged/main/default/objects/Contact/fields/Sub_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sub_Territory__c</fullName>
    <formula>TEXT(Account.Sub_Territory__c)</formula>
    <label>z_Sub Territory</label>
    <type>Text</type>
</CustomField>