unpackaged/main/default/objects/Contact/fields/Survey_Due__c.field-meta.xml
<CustomField>
    <fullName>Survey_Due__c</fullName>
    <description>Field contains the survey type if and when a survey needs to be sent via GetFeedback</description>
    <label>Survey Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>