unpackaged/main/default/objects/Contact/fields/T1D_CAM__c.field-meta.xml
<CustomField>
    <fullName>T1D_CAM__c</fullName>
    <formula>Account.T1Direct_CAM__r.FirstName &amp; &#39; &#39; &amp; Account.T1Direct_CAM__r.LastName</formula>
    <label>T1D CAM</label>
    <type>Text</type>
</CustomField>