unpackaged/main/default/objects/Contact/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>TEXT(Account.Territory__c)</formula>
    <label>z_Territory</label>
    <type>Text</type>
</CustomField>