unpackaged/main/default/objects/Contact/fields/TQL_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>TQL_Create_Date__c</fullName>
    <label>SDR QL Create Date</label>
    <type>Date</type>
</CustomField>