unpackaged/main/default/objects/Contact/fields/User_Groups__c.field-meta.xml
<CustomField>
    <fullName>User_Groups__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Hear about upcoming user groups in your region</inlineHelpText>
    <label>User Groups</label>
    <type>Checkbox</type>
</CustomField>