unpackaged/main/default/objects/Contact/fields/Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Market__c</fullName>
    <formula>TEXT(Account.Vertical_Market__c)</formula>
    <label>Industry/Vertical</label>
    <type>Text</type>
</CustomField>