unpackaged/main/default/objects/Contact/fields/Webinars__c.field-meta.xml
<CustomField>
    <fullName>Webinars__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Hear about upcoming webinars</inlineHelpText>
    <label>Webinars</label>
    <type>Checkbox</type>
</CustomField>