unpackaged/main/default/objects/Contact/fields/X2014_Showcase__c.field-meta.xml
<CustomField>
    <fullName>X2014_Showcase__c</fullName>
    <description>2014 Showcase</description>
    <label>2014 Showcase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>