unpackaged/main/default/objects/Contact/fields/X2016_Evolve__c.field-meta.xml
<CustomField>
    <fullName>X2016_Evolve__c</fullName>
    <description>2016 Evolve</description>
    <label>2016 Evolve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Complimentary No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>