unpackaged/main/default/objects/Contact/recordTypes/Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>Customer_Contact</fullName>
    <active>true</active>
    <description>Contacts for Customers</description>
    <label>Customer Contact</label>
</RecordType>