unpackaged/main/default/objects/Contact/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Partner/Associate/Consultant/Other</description>
    <label>Other</label>
</RecordType>