unpackaged/main/default/objects/Contact/recordTypes/Technology_One_Employee.recordType-meta.xml
<RecordType>
    <fullName>Technology_One_Employee</fullName>
    <active>true</active>
    <description>Employees of Technology one</description>
    <label>Technology One Employee</label>
</RecordType>