unpackaged/main/default/objects/Contact/validationRules/Phone_No_Format_for_AsiaPacific.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_No_Format_for_AsiaPacific</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(Phone) || ISNEW() = true) &amp;&amp;
(TEXT(Account.CountryArea__c) =&#39;Asia&#39; || TEXT(Account.CountryArea__c) =&#39;Pacific&#39;)  &amp;&amp; 
NOT (REGEX(LEFT(Phone, 4) , &quot;[+][0-9]{2} &quot;) || 
REGEX(LEFT(Phone, 5) , &quot;[+][0-9]{3} &quot;)
)
 &amp;&amp;
NOT ISBLANK(Phone) &amp;&amp;  
NOT ($Profile.Name  = &quot;Marketo Sync&quot;) &amp;&amp;
NOT ($Profile.Name = &quot;System Administrator&quot; || BEGINS($Profile.Name, &quot;T1 Customer Community&quot;)) &amp;&amp;  
NOT($Setup.T1_Control_Settings__c.Bypass_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>International format required. Phone numbers must have Country code prefix followed by Area Code (where applicable) excluding leading 0, followed by subscriber number. Examples: +60 3 1234 5678, +675 123 5678</errorMessage>
</ValidationRule>